add balanced task

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,13 @@ project(stack_task VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-add_executable(stack_task main.c)
+ set(SOURCE_FILES 
+  src/stack/stack.c
+  src/balanced_task/balanced_task.c
+  src/main.c
+  )
+
+ add_executable(stack_task ${SOURCE_FILES})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
